[package]
name = "unix"
version = "0.4.1"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Interface to Unix system facilities"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/unix/"

[dependencies]
flags = "0.1"
fallible = "0.1"
i-o = "0.4"
idem = "0.1"
libc = { version = "0.2", default-features = false }
null-terminated = "0.2.7"
rand = { version = "0.5.4", default-features = false }
syscall = "0.2"
tempus = { version = "0.2.2", features = ["libc"] }
void = { version = "1", default-features = false }

[build-dependencies]
libc = { version = "0.2", default-features = false }
